refactor: hu pages

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -167,6 +167,8 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "odoo-magyarul": "odoo-erp",
     "vuestorefront-headless-ecommerce": "vuestorefront-headless-ecommerce",
     "n8n-zapier-make-integromat": "n8n-zapier-make-integromat",
+    "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer": "queue-management-system",
+    "queue-management-system": "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
   };
 	//@ts-expect-error
   const englishSelector: astroHTML.JSX.OptionHTMLAttributes = document.getElementById("english");
