--- a/src/pages/hu/n8n-zapier-make-integromat.astro
+++ b/src/pages/hu/n8n-zapier-make-integromat.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/newsLetterhu.astro";
+import NewsLetter from "@components/newsletterhu.astro";
 changeLanguage("hu");
 ---
 
