--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -43,7 +43,7 @@ const pricingData = [
 ];
 ---
 
-<Layout title="Ügyfélhívó, vendéghívó, sorszámosztó kiosk, ügyfélirányító rendszer">
+<Layout title="Ügyfélhívó, vendéghívó, sorszámosztó kiosk, ügyfélirányító rendszer" lang="hu">
   <Container>
     <div class="px-5">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
@@ -55,7 +55,7 @@ const pricingData = [
           </a>
         </div>
         <div>
-          <img class="w-[40vw]" src="/qms.jpg" alt="" />
+          <img class="w-[40vw]" src="/images/qms.jpg" alt="" />
         </div>
       </div>
       <div class="flex flex-col items-center">
