--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -13,7 +13,7 @@ changeLanguage("hu");
 				<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Üzemeltetés</h1>
 				<p class="md:text-[40px] text-2xl font-semibold mb-10">ERPNext üzemeltetése a felhőben</p>
 				<div>
-					<img src="/frappecloud-banner.jpg" alt="" />
+					<img src="/images/frappecloud-banner.jpg" alt="" />
 				</div>
 			</div>
 			<div class="text-[#192734] dark:text-white">
