--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -106,7 +106,9 @@ const pricingData = [
     </div>
 
     <section>
-      <span class="dark:text-white text-black">*The number of users is not limited, but the optimized resources are limited.</span>
+      <div class="px-5 py-5">
+      <span class="dark:text-white text-black ">*The number of users is not limited, but the optimized resources are limited.</span>
+    </div>
     </section>
     <LetsTalk />
   </Container>
