--- a/src/pages/hu/konyveles.astro
+++ b/src/pages/hu/konyveles.astro
@@ -15,7 +15,7 @@ changeLanguage("hu");
 					<p class="text-gray-400 text-xl my-5">Könyvelést támogató megoldások</p>
 				</div>
 				<div class="flex-1 py-32">
-					<img class="w-full" src="/erpnextImage.png" alt="" /> 
+					<img class="w-full" src="/images/erpnextImage.png" alt="" /> 
 				</div>
 			</div>
 			<div class="flex flex-col items-center text-[#192734] dark:text-white">
