--- a/src/pages/hu/pricing.astro
+++ b/src/pages/hu/pricing.astro
@@ -3,8 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Pricing from "@components/pricing.astro";
-import Logos from "@components/logos.astro";
+import  PricingComponent from "@components/pricing.astro";
 import Faq from "@components/faq.astro";
 
 changeLanguage("hu");
@@ -55,7 +54,7 @@ const pricingData = [
 ];
 ---
 
-<Layout title="Pricing">
+<Layout title="Pricing" lang="hu">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Pricing</Fragment>
@@ -63,7 +62,7 @@ const pricingData = [
 		</Sectionhead>
 
 		<div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-20">
-			{pricingData.map((item) => <Pricing plan={item} />)}
+			{pricingData.map((item) => <PricingComponent plan={item} />)}
 		</div>
 		<!-- <Logos /> -->
 		<Faq />
