--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="en" title="Üzemeltetés">
+<Layout lang="hu" title="Üzemeltetés">
 	<Container>
 		<div class="py-20 px-10 md:px-0 text-[#192734] dark:text-white">
 			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Számlázás</h1>
