--- a/src/pages/hu/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/hu/vuestorefront-headless-ecommerce.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/newsLetterhu.astro";
+import NewsLetter from "@components/newsletterhu.astro";
 changeLanguage("hu");
 ---
 
@@ -18,7 +18,7 @@ changeLanguage("hu");
 					</a>
 				</div>
 				<div>
-					<img class="w-[40vw]" src="/vuestorefront-headless-ecommerce.jpg" alt="" />
+					<img class="w-[40vw]" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
