--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -1,20 +1,49 @@
 ---
-import { changeLanguage } from "i18next";
+import i18next,{ changeLanguage } from "i18next";
 import Container from "@components/container.astro";
-import Features from "@components/features.astro";
-import Faq from "@components/faq.astro";
-import Hero from "@components/hero.astro";
-import Newsletter from "@components/newsletter.astro";
 import Layout from "@layouts/Layout.astro";
+import LandingBody from "@components/landingBodyhu.astro";
+import { getCollection } from "astro:content";
 
 changeLanguage("hu");
+
+const allPosts = async () => {
+  var posts = await getCollection("blog", ({ data }) => {
+    return !data.draft;
+  });
+  // Preprocess the posts to split the slugs and get the languages
+  var processedPosts = posts.map((post) => {
+    const [...slug] = post.slug.split("/");
+    let lang = i18next.language;
+    var firstSlug = post.slug.match(/^([^\/]*)\//);
+    if (firstSlug) {
+      lang = firstSlug[1];
+    }
+    return {
+      ...post,
+      slug: slug.join("/"),
+      lang: lang,
+    };
+  });
+  // Filter posts based on the current language
+  const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
+  localizedPosts.sort(function (a, b) {
+    return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+  });
+  return localizedPosts;
+};
+const localizedPosts = await allPosts();
+export async function getStaticPaths({ paginate }) {
+  return paginate(localizedPosts, {
+    params: { blog: "blog" || undefined },
+  });
+}
+
+const page = localizedPosts.filter((post) => post.data.category.includes("hír"));
 ---
 
-<Layout>
+<Layout title="ERPNext, Frappe, Odoo plusz..." lang="hu">
 	<Container>
-		<Hero />
-		<Features />
-		<Faq />
-		<Newsletter />
+		<LandingBody page={page}/>
 	</Container>
 </Layout>
