feat: blog post in landing page

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -90,5 +90,5 @@ const { page } = Astro.props;
   </h3>
 </section>
 <section id="blog">
-  <!-- <BlogPostSection next="next" prev="prev" posts={page} client:load /> -->
+  <BlogPostSection next="next" prev="prev" posts={page} client:load />
 </section>
