--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -94,5 +94,5 @@ const { page } = Astro.props;
   </h3>
 </section>
 <section id="blog">
-  <!-- <BlogPostSection next="Következő" prev="Előző" posts={page} client:load /> -->
+  <BlogPostSection next="Következő" prev="Előző" posts={page} client:load />
 </section>
