[NEW] shopify menu

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -23,6 +23,7 @@ export const menuitems = [
 		title: "header.cms_eCommerce",
 		children: [
 			{ title: "VueStoreFront", path: "path_header.vue-storefront" },
+			{ title: "Shopify", path: "path_header.shopify" },
 		],
 	},
 	{
