--- a/src/pages/shopify-ecommerce.astro
+++ b/src/pages/shopify-ecommerce.astro
@@ -6,7 +6,7 @@ import NewsLetter from "@components/newsLetter.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="hu" title="Shopify webáruház magyarul">
+<Layout lang="hu" title="Shopify eCommerce">
     <Container>
         <div class="px-5">
             <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
