--- a/src/pages/shopify-ecommerce.astro
+++ b/src/pages/shopify-ecommerce.astro
@@ -11,7 +11,7 @@ changeLanguage("en");
         <div class="px-5">
             <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
                 <div class="flex flex-col h-full justify-center">
-                    <h1 class="text-[60px] leading-none font-semibold">Shopify webshop.</h1>
+                    <h1 class="text-[60px] leading-none font-semibold">Shopify eCommerce.</h1>
                     <h2 class="text-xl text-[#192734] dark:text-white my-4">The international industry standard.</h2>
                     <a href="/hu/kapcsolat">
                         <button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-32 h-12 text-xl">Let's talk!</button>
