[NEW] shopify menu

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -167,6 +167,7 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "odoo-magyarul": "odoo-erp",
     "vuestorefront-headless-ecommerce": "vuestorefront-headless-ecommerce",
     "n8n-zapier-make-integromat": "n8n-zapier-make-integromat",
+    "shopify-ecommerce": "shopify-webaruhaz",
   };
   const englishSelector: astroHTML.JSX.OptionHTMLAttributes = document.getElementById("english");
   const hungarySelector: astroHTML.JSX.OptionHTMLAttributes = document.getElementById("hungary");
