[NEW] shopify links

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -168,6 +168,7 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "vuestorefront-headless-ecommerce": "vuestorefront-headless-ecommerce",
     "n8n-zapier-make-integromat": "n8n-zapier-make-integromat",
     "shopify-ecommerce": "shopify-webaruhaz",
+    "shopify-webaruhaz": "shopify-ecommerce",
   };
   const englishSelector: astroHTML.JSX.OptionHTMLAttributes = document.getElementById("english");
   const hungarySelector: astroHTML.JSX.OptionHTMLAttributes = document.getElementById("hungary");
