--- a/src/pages/shopify-ecommerce.astro
+++ b/src/pages/shopify-ecommerce.astro
@@ -48,9 +48,9 @@ changeLanguage("en");
                         
                         Just as Shopify can't function as an enterprise resource planning (ERP) software, most integrated solutions, even if they offer e-commerce capabilities, can't be as exceptional as purpose-built software. This is where an ambivalent approach is important. While we favor integrated systems for their advantages and accept their potential limitations, we consider e-commerce and webshop management alongside our integrated system.
                         
-                        In our opinion, this is the best way to handle the Odoo ERP enterprise resource planning system. It's advisable to connect it to a webshop, and based on our experience, Shopify is one of the best choices due to its ease of integration and operation.
+                        In our opinion, this is the best way to handle the <a href="/odoo-erp/" style="text-decoration: underline;">Odoo</a> ERP enterprise resource planning system. It's advisable to connect it to a webshop, and based on our experience, Shopify is one of the best choices due to its ease of integration and operation.
                         
-                        We also mention the ERPNext system, which has a similar situation, with the main difference being that Shopify is the most supported option, offering the most features and maintenance. However, these solutions are only for integration and may be suitable for a certain stage of business growth. Larger players may need something different.
+                        We also mention the <a href="/erpnext/" style="text-decoration: underline;">ERPNext</a> system, which has a similar situation, with the main difference being that Shopify is the most supported option, offering the most features and maintenance. However, these solutions are only for integration and may be suitable for a certain stage of business growth. Larger players may need something different.
                     </p>
                 </section>
                 <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
@@ -60,7 +60,7 @@ changeLanguage("en");
                         
                         Shopify recognized this when they launched Shopify Premium Headless. However, with a starting monthly fee of $2000, it's not for everyone, even though most businesses would like to have such a system.
                         
-                        That's why we recommend the VueStoreFront solution, which was originally designed as a Headless technology. The saying holds true here as well: use the right tool for the job, whether it's an ERP or an e-commerce webshop solution.
+                        That's why we recommend the <a href="/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront</a> solution, which was originally designed as a Headless technology. The saying holds true here as well: use the right tool for the job, whether it's an ERP or an e-commerce webshop solution.
                         
                         These solutions excel in speed, which is a crucial factor today, and, as mentioned earlier, they truly deliver most "basic" functions at a high level of quality. Therefore, besides identifying your needs, it's important to decide on the e-commerce system you plan to implement.
                     </p>
