[NEW] shopify links

--- a/src/pages/shopify-ecommerce.astro
+++ b/src/pages/shopify-ecommerce.astro
@@ -41,8 +41,8 @@ changeLanguage("en");
                         Despite the continuous expansion of Shopify's features, it stands out for the wide range of extra apps available through the Shopify App Store. These apps include various integrations made possible by the Shopify API.
                     </p>
                 </section>
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
-                    <h2 class "font-bold text-3xl mb-10">Independently or Integrated</h2>
+                  <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                    <h2 class="font-bold text-3xl mb-10">Independently or Integrated</h2>
                     <p class="list-disc text-[17px] leading-7 space-y-5">
                         We've discussed the advantages and disadvantages of stand-alone and integrated systems before. Despite the continuous growth and expansion mentioned earlier, integration sets Shopify apart. Some other software solutions treat Shopify as a "webshop" and provide connectivity options for it.
                         
