--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -138,6 +138,7 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "hungarian-micro-enterprise-chart-of-accounts": "magyar-mikrogazdálkodói-számlatükör",
     "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer": "queue-management-system",
     "queue-management-system": "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
+    "mautic-marketing-automation-platform": "mautic-marketing-automation-platform",
   };
 
   const links = {
