--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -34,6 +34,7 @@ export const menuitems = [
 		title: "header.integration_nav",
 		children:[
 			{ title: "n8n", path: "path_header.n8n" },
+			{ title: "Mautic", path: "path_header.mautic" },
 	]
 	},
 ];
