--- a/src/pages/hu/blog/[slug].astro
+++ b/src/pages/hu/blog/[slug].astro
@@ -6,7 +6,7 @@ import Container from "@components/container.astro";
 import { Icon } from "astro-icon";
 import { localizePath } from "astro-i18next";
 import { getArticleReadingTime } from "@utils/blog";
-import Newsletterhu from "@components/newsletterhu.astro";
+import Newsletterhu from "@components/NewsLetterhu.astro";
 
 changeLanguage("hu");
 
