--- a/src/pages/hu/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/hu/vuestorefront-headless-ecommerce.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/newsletterhu.astro";
+import NewsLetter from "@components/NewsLetterhu.astro";
 changeLanguage("hu");
 ---
 
