--- a/src/pages/mautic-marketing-automation-platform.astro
+++ b/src/pages/mautic-marketing-automation-platform.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/newsLetter.astro";
+import NewsLetter from "@components/NewsLetter.astro";
 changeLanguage("en");
 ---
 
