--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/newsletter.astro";
+import NewsLetter from "@components/NewsLetter.astro";
 changeLanguage("en");
 ---
 
