refactor: updated changed name

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -6,7 +6,7 @@ import Container from "@components/container.astro";
 import { Icon } from "astro-icon";
 import { localizePath } from "astro-i18next";
 import { getArticleReadingTime } from "@utils/blog";
-import Newsletter from "@components/NewsLetter.astro";
+import Newsletter from "@components/EmailForm.astro";
 
 changeLanguage("en");
 
