--- a/src/pages/n8n-zapier-make-integromat.astro
+++ b/src/pages/n8n-zapier-make-integromat.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/NewsLetter.astro";
+import NewsLetter from "@components/EmailForm.astro";
 import Button from "@components/ui/button.astro";
 changeLanguage("en");
 ---
