--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -1,6 +1,6 @@
 ---
 import { BlogPostSection } from  "@components/BlogPostSection";
-import NewsLetter from "@components/NewsLetter.astro";
+import NewsLetter from "@components/EmailForm.astro";
 const { page } = Astro.props;
 ---
 
