--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -1,6 +1,6 @@
 ---
 import { BlogPostSection } from "./BlogPostSection"; "@components/BlogPostSection";
-import NewsLetter from "@components/NewsLetterhu.astro";
+import NewsLetter from "@components/EmailFormhu.astro";
 const { page } = Astro.props;
 ---
 
