--- a/src/pages/animated.astro
+++ b/src/pages/animated.astro
@@ -4,7 +4,7 @@ import Container from "@components/container.astro";
 import Features from "@components/features.astro";
 import Faq from "@components/faq.astro";
 import Hero from "@components/hero.astro";
-import Newsletter from "@components/NewsLetter.astro";
+import Newsletter from "@components/EmailForm.astro";
 import Layout from "@layouts/Layout.astro";
 
 changeLanguage("en");
