--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,7 +1,7 @@
 <body class="dark:bg-stone-900">
   <link rel="stylesheet" href="/cookieconsent.css" />
   <script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js"></script>
-  <script>
+  <script is:inline>
     window.addEventListener("load", () => {
       const cc = initCookieConsent();
 
