--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,7 +1,8 @@
 <body class="dark:bg-stone-900">
   <link rel="stylesheet" href="/cookieconsent.css" />
   <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js" is:inline></script>
-  <script>
+  <script is:inline>
+    window.onload = function () {
       const cc = initCookieConsent();
 
       cc.run({
@@ -93,6 +94,6 @@
         j.src = "https://service.monolithon.com/tyynmnmx.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-P4LTKG3");
-    }
+    }}
   </script>
 </body>
