--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -67,7 +67,7 @@ const whichLanguage: "hu" | "en" = Astro.url.pathname.startsWith("/hu/") ? "hu" 
             </a>
 
             <a href=`${value?.hungaryHref}` class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500 dark:hover:bg-gray-600">
-                Hungary
+                Magyar
             </a>
       </div>
     </div>
