--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -13,11 +13,11 @@ changeLanguage("hu");
 			<p class="md:text-[40px] text-2xl font-semibold">ERPNext magyar számlázás hamarosan - 2023 Q3</p>
 			<div>
 				<p class=" text-xl py-10">A magyar szabályoknak megfelelő számla kiállítását az ERPNext rendszerből hamarosan elérhetővé tesszük.			</p>
-				<img src="/IyzD8FB.png" alt="" />
+				<img src="/images/IyzD8FB.png" alt="" />
 			</div>
 			<div>
 				<p class=" text-xl py-10">Ráadásul nem csak hagyományos számlázóként, hanem pénztárgépként is használható lesz az ERPNext.				</p>
-				<img src="/S1Fzpjh.png" alt="" />
+				<img src="/images/S1Fzpjh.png" alt="" />
 			</div>
 		</div>
 	</Container>
