--- a/src/pages/mautic-marketing-automation-platform.astro
+++ b/src/pages/mautic-marketing-automation-platform.astro
@@ -3,6 +3,7 @@ import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import NewsLetter from "@components/EmailForm.astro";
+import Link from "@components/ui/link.astro";
 changeLanguage("en");
 ---
 
@@ -13,9 +14,11 @@ changeLanguage("en");
                 <div class="flex flex-col h-full justify-center">
                     <h1 class="text-[60px] leading-none font-semibold">Mautic marketing platform.</h1>
                     <h2 class="text-xl text-[#192734] dark:text-white my-4">Marketing automation and newsletters.</h2>
-                    <a href="/contact">
-                        <button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-32 h-12 text-xl">Let's talk!</button>
-                    </a>
+				<div>
+					<Link href="/contact/">
+						Lets Talk!
+					</Link>
+				</div>
                 </div>
                 <div>
                     <img class="w-[40vw]" src="/mautic-marketing-automation-platform.jpg" alt="" />
