--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,79 +1,279 @@
 ---
 import { changeLanguage } from "i18next";
-import { Icon } from "astro-icon";
 import Layout from "@layouts/Layout.astro";
-import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Button from "@components/ui/button.astro";
-import Contactform from "@components/contactform.astro";
 
 changeLanguage("en");
-
-let contacts = [
-    {
-        title: "Marketing",
-        email: "test@yourcompany.com",
-        phone: "+1 (555) 555-5555",
-    },
-    {
-        title: "Human Resources",
-        email: "test@yourcompany.com",
-        phone: "+1 (555) 555-5555",
-    },
-    {
-        title: "Finance",
-        email: "test@yourcompany.com",
-        phone: "+1 (555) 555-5555",
-    },
-    {
-        title: "Research and Development",
-        email: "test@yourcompany.com",
-        phone: "+1 (555) 555-5555",
-    },
-];
 ---
 
-<Layout title="Contact">
-	<Container>
-		<Sectionhead>
-			<Fragment slot="title">Contact</Fragment>
-			<Fragment slot="desc">Get in Touch.</Fragment>
-		</Sectionhead>
+<Layout title="Contact" lang="en">
+	<Sectionhead>
+		<Fragment slot="title">Contact</Fragment>
+		<Fragment slot="desc">Get in Touch.</Fragment>
+	</Sectionhead>
+	<style type="text/css" scoped>
+		.mauticform_wrapper {
+			max-width: 600px;
+			margin: 10px auto;
+		}
+		.mauticform-innerform {
+		}
+		.mauticform-post-success {
+		}
+		.mauticform-name {
+			font-weight: bold;
+			font-size: 1.5em;
+			margin-bottom: 3px;
+		}
+		.mauticform-description {
+			margin-top: 2px;
+			margin-bottom: 10px;
+		}
+		.mauticform-error {
+			margin-bottom: 10px;
+			color: red;
+		}
+		.mauticform-message {
+			margin-bottom: 10px;
+			color: green;
+		}
+		.mauticform-row {
+			display: block;
+			margin-bottom: 20px;
+		}
+		.mauticform-label {
+			font-size: 1.1em;
+			display: block;
+			font-weight: bold;
+			margin-bottom: 5px;
+		}
+		.mauticform-row.mauticform-required .mauticform-label:after {
+			color: #e32;
+			content: " *";
+			display: inline;
+		}
+		.mauticform-helpmessage {
+			display: block;
+			font-size: 0.9em;
+			margin-bottom: 3px;
+		}
+		.mauticform-errormsg {
+			display: block;
+			color: red;
+			margin-top: 2px;
+		}
+		.mauticform-selectbox,
+		.mauticform-input,
+		.mauticform-textarea {
+			width: 100%;
+			padding: 0.5em 0.5em;
+			border: 1px solid #ccc;
+			background: #fff;
+			box-shadow: 0px 0px 0px #fff inset;
+			border-radius: 4px;
+			box-sizing: border-box;
+		}
+		.mauticform-checkboxgrp-row {
+		}
+		.mauticform-checkboxgrp-label {
+			font-weight: normal;
+		}
+		.mauticform-checkboxgrp-checkbox {
+		}
+		.mauticform-radiogrp-row {
+		}
+		.mauticform-radiogrp-label {
+			font-weight: normal;
+		}
+		.mauticform-radiogrp-radio {
+		}
+		.mauticform-button-wrapper .mauticform-button.btn-default,
+		.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default {
+			color: #5d6c7c;
+			background-color: #ffffff;
+			border-color: #dddddd;
+		}
+		.mauticform-button-wrapper .mauticform-button,
+		.mauticform-pagebreak-wrapper .mauticform-pagebreak {
+			display: inline-block;
+			margin-bottom: 0;
+			font-weight: 600;
+			text-align: center;
+			vertical-align: middle;
+			cursor: pointer;
+			background-image: none;
+			border: 1px solid transparent;
+			white-space: nowrap;
+			padding: 6px 12px;
+			font-size: 13px;
+			line-height: 1.3856;
+			border-radius: 3px;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
+		.mauticform-button-wrapper .mauticform-button.btn-default[disabled],
+		.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] {
+			background-color: #ffffff;
+			border-color: #dddddd;
+			opacity: 0.75;
+			cursor: not-allowed;
+		}
+		.mauticform-pagebreak-wrapper .mauticform-button-wrapper {
+			display: inline;
+		}
+	</style><style type="text/css" scoped>
+		.mauticform-field-hidden {
+			display: none;
+		}
+	</style>
 
-		<div class="py-24 sm:py-32">
-			<div class="mx-auto max-w-7xl px-6 lg:px-8">
-				<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
-					<div class="grid grid-cols-1 gap-x-8 gap-y-10 lg:grid-cols-3">
-						<div>
-							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Departments</h2>
-							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Reach Out to Our Dedicated Teams.</p>
-						</div>
-						<div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:col-span-2 lg:gap-8">
-							{
-								contacts.map((item) => (
-									<div class="rounded-2xl bg-gray-50 dark:bg-stone-800 p-10">
-										<h3 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">{item.title}</h3>
-										<dl class="mt-3 space-y-1 text-sm leading-6 text-gray-600 dark:text-white">
-											<div>
-												<dt class="sr-only">Email</dt>
-												<dd>
-													<a class="font-semibold text-stone-600 dark:text-white" href="mailto:collaborate@example.com">
-														{item.email}
-													</a>
-												</dd>
-											</div>
-											<div class="mt-1">
-												<dt class="sr-only">Phone number</dt>
-												<dd>{item.phone}</dd>
-											</div>
-										</dl>
+	<div class="py-24 sm:py-32">
+		<div class="mx-auto max-w-7xl px-6 lg:px-8">
+			<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
+				<div class="md:flex">
+					<div>
+						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Monlithon Support:</h2>
+						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Tibor Gede - founder</br>
+							Budapest</br>
+							Hungary</br>
+							+36 30 7192 418</br>
+							</p>
+					</div>
+					<div id="mauticform_wrapper_contactform" class=" flex-grow mauticform_wrapper text-[#192734] dark:text-white dark:bg-stone-900">
+						<form
+							autocomplete="false"
+							role="form"
+							method="post"
+							action="https://asset.monolithon.com/form/submit?formId=1"
+							id="mauticform_contactform"
+							data-mautic-form="contactform"
+							enctype="multipart/form-data">
+							<div class="mauticform-error" id="mauticform_contactform_error"></div>
+							<div class="mauticform-message" id="mauticform_contactform_message"></div>
+							<div class="mauticform-innerform">
+								<div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
+									<div
+										id="mauticform_contactform_first_name"
+										data-validate="first_name"
+										data-validation-type="text"
+										class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
+										<label
+											id="mauticform_label_contactform_first_name"
+											for="mauticform_input_contactform_first_name"
+											class="mauticform-label">
+											First Name
+										</label>
+										<input
+											id="mauticform_input_contactform_first_name"
+											name="mauticform[first_name]"
+											value=""
+											class="mauticform-input"
+											type="text"
+										/>
+										<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
 									</div>
-								))
-							}
-						</div>
+
+									<div
+										id="mauticform_contactform_last_name"
+										data-validate="last_name"
+										data-validation-type="text"
+										class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
+										<label
+											id="mauticform_label_contactform_last_name"
+											for="mauticform_input_contactform_last_name"
+											class="mauticform-label">
+											Last Name
+										</label>
+										<input
+											id="mauticform_input_contactform_last_name"
+											name="mauticform[last_name]"
+											value=""
+											class="mauticform-input"
+											type="text"
+										/>
+										<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+									</div>
+
+									<div
+										id="mauticform_contactform_email_address"
+										data-validate="email_address"
+										data-validation-type="email"
+										class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
+										<label
+											id="mauticform_label_contactform_email_address"
+											for="mauticform_input_contactform_email_address"
+											class="mauticform-label">
+											Email address
+										</label>
+										<input
+											id="mauticform_input_contactform_email_address"
+											name="mauticform[email_address]"
+											value=""
+											class="mauticform-input"
+											type="email"
+										/>
+										<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+									</div>
+
+									<div
+										id="mauticform_contactform_mobile"
+										data-validate="mobile"
+										data-validation-type="text"
+										class="mauticform-row mauticform-text mauticform-field-4 mauticform-required">
+										<label
+											id="mauticform_label_contactform_mobile"
+											for="mauticform_input_contactform_mobile"
+											class="mauticform-label">
+											Mobile
+										</label>
+										<input
+											id="mauticform_input_contactform_mobile"
+											name="mauticform[mobile]"
+											value=""
+											class="mauticform-input"
+											type="text"
+										/>
+										<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+									</div>
+
+									<div id="mauticform_contactform_f_message" class="mauticform-row mauticform-text mauticform-field-5">
+										<label
+											id="mauticform_label_contactform_f_message"
+											for="mauticform_input_contactform_f_message"
+											class="mauticform-label">
+											Message
+										</label>
+										<textarea
+											id="mauticform_input_contactform_f_message"
+											name="mauticform[f_message]"
+											class="mauticform-textarea">
+										</textarea>
+										<span class="mauticform-errormsg" style="display: none;"></span>
+									</div>
+
+									<div id="mauticform_contactform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
+										<button
+											type="submit"
+											name="mauticform[submit]"
+											id="mauticform_input_contactform_submit"
+											value=""
+											class="mauticform-button btn btn-default">
+											Submit
+										</button>
+									</div>
+								</div>
+							</div>
+
+							<input type="hidden" name="mauticform[formId]" id="mauticform_contactform_id" value="1" />
+							<input type="hidden" name="mauticform[return]" id="mauticform_contactform_return" value="" />
+							<input type="hidden" name="mauticform[formName]" id="mauticform_contactform_name" value="contactform" />
+						</form>
 					</div>
 				</div>
 			</div>
+
 		</div>
-	</Container>
+	</div>
 </Layout>
