ui: ladingBody font weight

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -9,7 +9,7 @@ const { page } = Astro.props;
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="images/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
-        <span class="text-sm font-medium text-heading">
+        <span class="text-sm font-bold text-heading">
           I fly often for business. Yesterday, I had three bags to check. I said,<br />"I'd like this bag to go to New Orleans, this one to Seattle,
           and the third to Chicago."<br /> The gate agent rolled her eyes and said:
         </span>
@@ -19,7 +19,7 @@ const { page } = Astro.props;
   <div class="flex justify-end">
     <div class="flex w-11/12 flex-row-reverse">
       <div class="relative max-w-xl rounded-xl rounded-tr-none bg-[#CCE7FF] px-4 py-2">
-        <span class="text-sm font-medium text-black">We can't do that!</span>
+        <span class="text-sm font-bold text-black">We can't do that!</span>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@ const { page } = Astro.props;
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="images/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
-        <span class="text-sm font-medium text-heading">I immediately replied:<br /> "Why? You did it last week." 😀</span>
+        <span class="text-sm font-bold text-heading">I immediately replied:<br /> "Why? You did it last week." 😀</span>
       </div>
     </div>
   </div>
