--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -9,7 +9,7 @@ const { page } = Astro.props;
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/images/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
-        <span class="text-sm font-medium text-heading">
+        <span class="text-sm font-bold text-heading">
           Gyakran utazom üzleti ügyben. Tegnap három bőröndöt kellett feladnom, amikor ezt mondtam:<br />"Szeretném, ha ez a bőrönd New Orleansba, ez
           Seattle-be, a harmadik pedig Chicagóba menne."<br />A reptéri munkatárs a szemét forgatta és közölte:
         </span>
@@ -19,7 +19,7 @@ const { page } = Astro.props;
   <div class="flex justify-end">
     <div class="flex w-11/12 flex-row-reverse">
       <div class="relative max-w-xl rounded-xl rounded-tr-none bg-[#CCE7FF] px-4 py-2">
-        <span class="text-sm font-medium text-black">Ezt mi nem tudjuk megoldani.</span>
+        <span class="text-sm font-bold text-black">Ezt mi nem tudjuk megoldani.</span>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@ const { page } = Astro.props;
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/images/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
-        <span class="text-sm font-medium text-heading">Azonnal kontráztam:<br /> "Miért? Múlt héten pont ezt csinálták." 😀</span>
+        <span class="text-sm font-bold text-heading">Azonnal kontráztam:<br /> "Miért? Múlt héten pont ezt csinálták." 😀</span>
       </div>
     </div>
   </div>
