--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,6 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 		<HeadHrefLangs />
 
 		<ViewTransitions />
-
 		<!-- Global CSS -->
 		<link rel="stylesheet" href="/index.css" />
 
@@ -96,7 +95,7 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 				content-visibility: auto;
 			}
 		</style>
-		<script type="text/javascript">
+		<script type="text/javascript" is:inline>
 			/** This section is only needed once per page if manually copying **/
 			if (typeof MauticSDKLoaded == "undefined") {
 				var MauticSDKLoaded = true;
